--- a/webscraper/templates/default.html
+++ b/webscraper/templates/default.html
@@ -13,7 +13,13 @@
 
 {% block scripts %}
 <script src="{% static "js/vendor/jquery.js" %}"></script>
-<script src="{% static "js/vendor/what-input.js" %}"></script>
 <script src="{% static "js/vendor/foundation.js" %}"></script>
+<script src="{% static "js/vendor/foundation.min.js" %}"></script>
+<script src="{% static "js/vendor/what-input.js" %}"></script>
 <script src="{% static "js/app.js" %}"></script>
+<!-- for dropdown -->
+<script src="{% static "js/foundation/foundation.js" %}"></script>
+<script src="{% static "js/foundation/foundation.dropdown.js" %}"></script>
+<script src="{% static "js/foundation/foundation.topbar.js" %}"></script>
+
 {% endblock %}
