ajax call working, moved js to app.js

--- a/webscraper/templates/database.html
+++ b/webscraper/templates/database.html
@@ -113,7 +113,7 @@
    <hr class="customColor">
 
    <div align="center" class="row, small-12 columns">
-      <button type="submit" class="button" >Update Database</button>
+      <button id="update" class="button" type="submit">Update Database</button>
    </div>
 
    <div class="tableDiv">
