--- a/webscraper/static/css/app.css
+++ b/webscraper/static/css/app.css
@@ -1,21 +1,17 @@
 /* Start top bar CSS */
 div.top-bar{
-  position: static;
+  padding-top: 1%;
   background-color: white;
   height: 90px;
   border: 2px solid #CACACA;
 }
 div.top-bar-left{
-  position: relative;
-  top: 5%;
   font-style: oblique;
   font-family: lucida;
   font-size: 40px;
 }
 div.top-bar-right{
-  position: relative;
-  top:28%;
-  padding-bottom: 20px;
+  padding-top: 1.5%;
 }
 a.linkColor{
   color: #000000;
@@ -37,21 +33,23 @@ hr.customColor{
    background-color: #505050;
 }
 div.propertySearch{
-   /* border: 2px solid #505050; */
    padding: 1rem;
    width: 90%;
    margin: auto;
 }
-p.filterResults{
-   text-align: center;
-   font-weight: bold;
-}
 span.equity_align{
   padding-top: 20rem;
-  /* padding-top: 15%; */
 }
 div.equity_align{
   padding-top: 5%;
   padding-bottom:1%;
-  /* padding-top: 15%; */
+}
+div.spin{
+   visibility: hidden;
+   background-color: #CACACA;
+   background-repeat:no-repeat;
+   height: 32px;
+}
+div.updateDiv{
+   height: 40px;
 }
