--- a/webscraper/templates/database.html
+++ b/webscraper/templates/database.html
@@ -8,15 +8,14 @@
 
 {% block content %}
 <!-- Start Top Bar, sticky -->
-<div data-sticky-container>
-  <div class="top-bar row" data-sticky data-options="marginTop:0;" style="width:100%">
-    <div class="top-bar-left large-offset-2 large-6 columns">
+<div data-sticky-container class="row, large-12 columns, top-bar">
+   <div class="large-offset-2 large-6 columns top-bar-left">
       <p align="center"> <a class="linkColor" href="/#/"> Lovin Real Estate </a> </p>
-    </div>
-    <div class="top-bar-right large-offset-3 large-1 columns end hide-for-small-only">
-      <h5 align="center" class="rightheadertext"> Code Violations Database </h5>
-    </div>
-  </div>
+   </div>
+
+   <div class="large-offset-3 large-1 columns end hide-for-small-only top-bar-right">
+      <h5 align="left"> Code Violations Database </h5>
+   </div>
 </div>
 <!-- End Top Bar -->
 
@@ -27,7 +26,7 @@
 
    <div class="propertySearch">
       <div class="row">
-         <p class="filterResults">Filter Results By The Following:</p>
+         <h6 align="center"> <b>Filter Results By The Following:</b> </h6>
          <div class="small-12 columns">
 
             <div class="small-3 columns">
@@ -112,8 +111,18 @@
 
    <hr class="customColor">
 
-   <div align="center" class="row, small-12 columns">
-      <button id="update" class="button" type="submit">Update Database</button>
+   <div class="updateDiv" class="row, small-12 columns">
+      <div align="right" class="small-6 columns">
+         <h5><b> {{ num_of_houses }} Current Listings </b></h5>
+      </div>
+
+      <div align="right" class="small-2 columns">
+         <button id="update" class="button" type="submit">Update Database</button>
+      </div>
+
+      <div align="left" class="small-4 columns">
+         <div id="spinner" class="spin" style="background-image: url({% static 'images/ajax-loader.gif' %})"> <br> </div>
+      </div>
    </div>
 
    <div class="tableDiv">
@@ -122,8 +131,9 @@
             <tr>
             <th width="150">Case #</th>
             <th width="150">Street #</th>
-            <th width="250">Street Name</th>
-            <th>Category</th>
+            <th width="200">Street Name</th>
+            <th width="300">Category</th>
+            <th width="100">Days Old</th>
             </tr>
          </thead>
 
@@ -134,6 +144,7 @@
                <td> {{ object.streetNum }} </td>
                <td> {{ object.streetName }} </td>
                <td> {{ object.category }} </td>
+               <td>  </td>
             </tr>
             {% endfor %}
 
