--- a/webscraper/templates/propertyInfo.html
+++ b/webscraper/templates/propertyInfo.html
@@ -8,15 +8,14 @@
 
 {% block content %}
 <!-- Start Top Bar, sticky -->
-<div data-sticky-container>
-  <div class="top-bar row" data-sticky data-options="marginTop:0;" style="width:100%">
-    <div class="top-bar-left large-offset-2 large-6 columns">
+<div data-sticky-container class="row, large-12 columns, top-bar">
+   <div class="large-offset-2 large-6 columns top-bar-left">
       <p align="center"> <a class="linkColor" href="/#/"> Lovin Real Estate </a> </p>
-    </div>
-    <div class="top-bar-right large-offset-3 large-1 columns end hide-for-small-only">
-      <h5 align="center" class="rightheadertext"> Code Violations Database </h5>
-    </div>
-  </div>
+   </div>
+
+   <div class="large-offset-3 large-1 columns end hide-for-small-only top-bar-right">
+      <h5 align="left"> Code Violations Database </h5>
+   </div>
 </div>
 <!-- End Top Bar -->
 
@@ -141,7 +140,7 @@
                      <td> Current Residents </td>
                      <td> include name, age, gender </td>
                   </tr>
-                  
+
                </tbody>
 
             </table>
