working on the update daysOld field, not working correctly

--- a/webscraper/templates/database.html
+++ b/webscraper/templates/database.html
@@ -144,7 +144,7 @@
                <td> {{ object.streetNum }} </td>
                <td> {{ object.streetName }} </td>
                <td> {{ object.category }} </td>
-               <td>  </td>
+               <td> {{ object.daysOld }} </td>
             </tr>
             {% endfor %}
 
