starting search feature, update finished

--- a/webscraper/static/css/app.css
+++ b/webscraper/static/css/app.css
@@ -53,3 +53,9 @@ div.spin{
 div.updateDiv{
    height: 40px;
 }
+div.logo{
+   /* height:600px; */
+   /* width:600px; */
+   background-repeat:no-repeat;
+   background-size: 90% 50%;
+}
