working on google maps street view api and logo appearance

--- a/webscraper/templates/database.html
+++ b/webscraper/templates/database.html
@@ -8,17 +8,17 @@
 
 
 {% block content %}
-<!-- Start Top Bar, sticky -->
-<!-- <div data-sticky-container class="row, large-12 columns, top-bar">
-   <div class="large-6 columns  logo" style="background-image: url({% static 'images/image.jpeg' %})">
-      <br><br><br><br><br><br><br><br>
+<!-- Start Top Bar -->
+<div data-sticky-container class="row, large-12 columns, top-bar">
+   <div class="large-6 columns  logo" style="background-image: url({% static 'images/logo-small.jpg' %})">
+      <br><br><br><br><br>
    </div>
    <div class="large-6 columns end hide-for-small-only ">
       <h5 align="left"> Code Violations Database </h5>
    </div>
-</div> -->
+</div>
 
-<div data-sticky-container class="row, large-12 columns, top-bar">
+<!-- <div data-sticky-container class="row, large-12 columns, top-bar">
    <div class="large-offset-2 large-6 columns top-bar-left">
       <p align="center"> <a class="linkColor" href="/#/"> Lovin Real Estate </a> </p>
    </div>
@@ -26,7 +26,7 @@
    <div class="large-offset-3 large-1 columns end hide-for-small-only top-bar-right">
       <h5 align="left"> Code Violations Database </h5>
    </div>
-</div>
+</div> -->
 <!-- End Top Bar -->
 
 
