--- a/webscraper/templates/runUpdate.html
+++ b/webscraper/templates/runUpdate.html
@@ -7,7 +7,7 @@
 
 
 {% block content %}
-<!-- Start Top Bar, sticky -->
+<!-- Start Top Bar -->
 <div data-sticky-container class="row, large-12 columns, top-bar">
    <div class="large-offset-2 large-6 columns top-bar-left">
       <p align="center"> <a class="linkColor" href="/#/"> Lovin Real Estate </a> </p>
