--- a/webscraper/templates/propertyInfo.html
+++ b/webscraper/templates/propertyInfo.html
@@ -7,7 +7,7 @@
 
 
 {% block content %}
-<!-- Start Top Bar, sticky -->
+<!-- Start Top Bar -->
 <div data-sticky-container class="row, large-12 columns, top-bar">
    <div class="large-offset-2 large-6 columns top-bar-left">
       <p align="center"> <a class="linkColor" href="/#/"> Lovin Real Estate </a> </p>
@@ -23,10 +23,11 @@
 <div class="background">
    <br><br>
    <h3 align="center">Property Info for {{ property_info.streetNum }}
-   {{ property_info.streetName }}</h3>
+   {{ property_info.streetName }} </h3>
 
    <hr class="customColor">
 
+   <!-- Start table with property info -->
    <div class="row">
       <div class="small-12 columns">
          <div class="small-3 columns">
@@ -65,6 +66,11 @@
                   <tr>
                      <td> Category </td>
                      <td> {{ property_info.category }} </td>
+                  </tr>
+
+                  <tr>
+                     <td> Days Old </td>
+                     <td> {{ property_info.daysOld }} </td>
                   </tr>
 
                   <tr>
@@ -122,13 +128,45 @@
             </table>
          </div>
 
+
          <div class="small-3 columns">
             <p> </p>
          </div>
 
       </div>
    </div>
+   <!-- End table with property info -->
+
+
+   <hr class="customColor">
+
+   <!-- Start google maps api -->
+   <div class="row">
+      <div class="small-12 columns">
+         <div class="small-1 columns">
+            <p> </p>
+         </div>
+
+         <div class="tableDiv, small-10 columns">
+            <div>
+               <iframe align="center" width="100%" height="675" frameborder="0" style="border:0"
+               src="https://www.google.com/maps/embed/v1/streetview?&location=38.5429212,-121.4725107&key=AIzaSyDWGLTRDyhM0EuhzZ3Jfk1WqA5MbHjrt78" allowfullscreen></iframe>
+            </div>
+         </div>
+
+
+         <div class="small-1 columns">
+            <p> </p>
+         </div>
+
+      </div>
+
+   </div>
+
+   <br>
+
 </div>
+   <!-- End google maps api -->
 
 {% endblock %}
 
