--- a/webscraper/templates/database.html
+++ b/webscraper/templates/database.html
@@ -9,24 +9,17 @@
 
 {% block content %}
 <!-- Start Top Bar -->
-<div data-sticky-container class="row, large-12 columns, top-bar">
-   <div class="large-6 columns  logo" style="background-image: url({% static 'images/logo-small.jpg' %})">
-      <br><br><br><br><br>
+<div data-container class="row, large-12 columns, top-bar">
+   <div class="small-2 columns end hide-for-small-only ">
+      <p> </p>
    </div>
-   <div class="large-6 columns end hide-for-small-only ">
-      <h5 align="left"> Code Violations Database </h5>
+   <div class="small-4 columns logo" style="background-image: url({% static 'images/logo-small.jpg' %})">
+      <br><br><br><br><br><br>
+   </div>
+   <div class="small-6 columns end hide-for-small-only, top-bar-right">
+      <h4> Code Violations Database </h4>
    </div>
 </div>
-
-<!-- <div data-sticky-container class="row, large-12 columns, top-bar">
-   <div class="large-offset-2 large-6 columns top-bar-left">
-      <p align="center"> <a class="linkColor" href="/#/"> Lovin Real Estate </a> </p>
-   </div>
-
-   <div class="large-offset-3 large-1 columns end hide-for-small-only top-bar-right">
-      <h5 align="left"> Code Violations Database </h5>
-   </div>
-</div> -->
 <!-- End Top Bar -->
 
 
