--- a/webscraper/templates/propertyInfo.html
+++ b/webscraper/templates/propertyInfo.html
@@ -8,13 +8,15 @@
 
 {% block content %}
 <!-- Start Top Bar -->
-<div data-sticky-container class="row, large-12 columns, top-bar">
-   <div class="large-offset-2 large-6 columns top-bar-left">
-      <p align="center"> <a class="linkColor" href="/#/"> Lovin Real Estate </a> </p>
+<div data-container class="row, large-12 columns, top-bar">
+   <div class="small-2 columns end hide-for-small-only ">
+      <p> </p>
    </div>
-
-   <div class="large-offset-3 large-1 columns end hide-for-small-only top-bar-right">
-      <h5 align="left"> Code Violations Database </h5>
+   <div class="small-4 columns logo" style="background-image: url({% static 'images/logo-small.jpg' %})">
+      <br><br><br><br><br><br>
+   </div>
+   <div class="small-6 columns end hide-for-small-only, top-bar-right">
+      <h4> Code Violations Database </h4>
    </div>
 </div>
 <!-- End Top Bar -->
@@ -150,17 +152,14 @@
          <div class="tableDiv, small-10 columns">
             <div>
                <iframe align="center" width="100%" height="675" frameborder="0" style="border:0"
-               src="https://www.google.com/maps/embed/v1/streetview?&location=38.5429212,-121.4725107&key=AIzaSyDWGLTRDyhM0EuhzZ3Jfk1WqA5MbHjrt78" allowfullscreen></iframe>
+               src="https://www.google.com/maps/embed/v1/streetview?&location=38.542917,-121.470322&key=AIzaSyDWGLTRDyhM0EuhzZ3Jfk1WqA5MbHjrt78" allowfullscreen></iframe>
             </div>
          </div>
-
 
          <div class="small-1 columns">
             <p> </p>
          </div>
-
       </div>
-
    </div>
 
    <br>
