--- a/webscraper/templates/propertyInfo.html
+++ b/webscraper/templates/propertyInfo.html
@@ -152,7 +152,7 @@
          <div class="tableDiv, small-10 columns">
             <div>
                <iframe align="center" width="100%" height="675" frameborder="0" style="border:0"
-               src="https://www.google.com/maps/embed/v1/streetview?&location=38.542917,-121.470322&key=AIzaSyDWGLTRDyhM0EuhzZ3Jfk1WqA5MbHjrt78" allowfullscreen></iframe>
+               src="{{ street_view_url }}" allowfullscreen></iframe>
             </div>
          </div>
 
