--- a/webscraper/templates/propertyInfo.html
+++ b/webscraper/templates/propertyInfo.html
@@ -150,10 +150,16 @@
          </div>
 
          <div class="tableDiv, small-10 columns">
+            {% if street_view_url != "" %}
             <div>
-               <iframe align="center" width="100%" height="675" frameborder="0" style="border:0"
+               <iframe align="center" width="100%" height="600" frameborder="0" style="border:0"
                src="{{ street_view_url }}" allowfullscreen></iframe>
             </div>
+            {% else %}
+            <div>
+               <h5 align="center"> Street view is unavailable for this property. </h5>
+            </div>
+            {% endif %}
          </div>
 
          <div class="small-1 columns">
